@@ -1,0 +1,6 @@
+package com.netflix.governator.guice.mocks;
+
+public interface SimpleGenericInterface<T>
+{
+    public T  getValue();
+}
